--- a/index.html
+++ b/index.html
@@ -28,26 +28,71 @@
         /* SOCIAL STYLES */
         .social-link {
             background: rgba(150, 150, 150, 0.5);
-            color: blue;
+            border-radius: 100px;
+            box-sizing: border-box;
+            color: #fff;
+            display: inline-block;
+            height: 2.5em;
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 1rem;
+            font-weight: bold;
+            line-height: 1;
+            padding-top: 0.7em;
+            text-align: center;
+            text-decoration: none;
+            width: 2.5em;
+        }
+
+        .social-list {
+            list-style: none;
+            padding: 0;
+            text-align: center;
+        }
+        .social-list > li {
+            display: inline-block;
+            margin: 0.7em;
+            
         }
 
         /* BIO STYLES */
         .bio-wrapper {
             font-size: 24px;
+            overflow: scroll;
+        }
+
+        .bio-wrapper:after {
+            visibility: hidden;
+            display: block;
+            font-size: 0;
+            content: " ";
+            clear: both;
+            height: 0;
         }
 
         .bio-box {
             border: 1px solid black;
+            box-sizing: border-box;
+            float: left;
             font-size: 1rem;
-            width: 50%;
+            margin: 40px 1% 0;
+            padding: 0 2% 2%;
+            width: 19%;
         }
 
         .bio-box h3 {
+            color: #32c9b3;
             font-size: 1.5em;
+            margin: -40px 0 1em;
+            text-align: center;
+        }
+
+        .bio-box img {
+           width: 100%; 
         }
 
         .bio-copy {
             font-size: 1em;
+            line-height: 1.5;
         }
 
         .bio-copy a {
@@ -59,22 +104,24 @@
 <body>
     <div class="full-hero hero-home">
         <h1>I'm an h1</h1>
-        <ul>
+        <ul class="social-list">
             <li>
-                <a href="https://example.com/">Link</a>
+                <a href="https://example.com/" class="social-link">Fb</a>
             </li>
             <li>
-                <a href="https://example.com/">Link</a>
+                <a href="https://example.com/" class="social-link">Tw</a>
             </li>
             <li>
-                <a href="https://example.com/">Link</a>
+                <a href="https://example.com/" class="social-link">Gh</a>
             </li>
         </ul>
     </div>
 
     <h2>I'm an h2</h2>
+
     <div class="bio-wrapper">
         <div class="bio-box">
+            <img src="https://placekitten.com/g/400/400">
             <h3>Michael Hartl</h3>
             <a href="https://twitter.com/mhartl" class="social-link">
                 here
@@ -96,6 +143,7 @@
             </div>
         </div>
         <div class="bio-box">
+            <img src="https://placekitten.com/g/400/400">
             <h3>Lee Donahoe</h3>
             <a href="https://twitter.com/leedonahoe" class="social-link">
                 here
@@ -110,6 +158,7 @@
             </div>
         </div>
         <div class="bio-box">
+            <img src="https://placekitten.com/g/400/400">
             <h3>Nick Merwin</h3>
             <a href="https://twitter.com/nickmerwin" class="social-link">
                 here
@@ -124,6 +173,7 @@
             </div>
         </div>
         <div class="bio-box">
+            <img src="https://placekitten.com/g/400/400">
             <h3>??</h3>
             <div class="bio-copy">
                 <p>
